# agent-interview-prep

./: Dockerfile  app.py  pyproject.toml
.github/workflows/: deploy.yml
a2a_service/: agent_card.py  executor.py  server.py
agents/: agent.py
database/: memory.py  mongo.py
tools/: codebase_parser.py  note_generator.py  research_client.py  srs.py
